# fc_admin_codefilx_python

./: .gitignore  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pystest.ini  requirements.txt  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh  start-app.sh
.docker/.prometheus/: prometheus.yaml
.elastic/beats/metric/: metricbeat.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.txt  ci.yaml  ci_sonarcloud.txt
.scannerwork/: report-task.txt
src/: manage.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_integr_validadors.py
src/__seedwork/tests/unit/: test_unit_repositories.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_object.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/tests/integration/domain/: test_integ_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/__seedwork/tests/integration/domain/: test_integr_validadors.py
src/core/__seedwork/tests/unit/: test_unit_repositories.py
src/core/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_usecases.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_object.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/: repositories.py
src/core/category/infra/django/: api.py  apps.py  urls.py
src/core/category/infra/django_app/: api.py  apps.py  mappers.py  models.py  repositories.py  serializers.py  urls.py
src/core/category/infra/django_app/migrations/: 0001_initial.py
src/core/category/infra/in_memory/: repositories.py
src/core/category/tests/integration/application/: test_int_use_cases.py  test_integr_use_cases.py
src/core/category/tests/integration/domain/: test_integ_entities.py
src/core/category/tests/integration/infra/django_app/: test_int_mappers.py  test_int_models.py  test_int_repositories.py  test_integr_mappers.py  test_integr_models.py  test_integr_repositories.py
src/core/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/category/tests/unit/domain/: test_unit_entities.py
src/core/category/tests/unit/infra/: test_unit_repositories.py
src/core/category/tests/unit/infra/django_app/: test_unit_api.py
src/core/category/tests/unit/infra/in_memory/: test_unit_repositories.py
src/django_app/: container.py  manage.py  settings.py  urls.py
tmp/devcontainers-38e29656-499f-43f0-a47a-657fb5c402cf1675436891143/: env-loginInteractiveShell.json
