[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.1",
    "pylint>=2.15.9",
    "pytest>=7.2.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "candidosouza", email = "candidosouzza@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "djangorestframework>=3.14.0",
    "tox>=4.4.11",
    "coverage>=7.2.3",
    "elastic-apm>=6.15.1",
]
requires-python = ">=3.10.2"
license = {text = "n"}
