[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.1",
    "pylint>=2.15.9",
    "pytest>=7.2.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "candidosouza", email = "candidosouzza@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "djangorestframework>=3.14.0",
    "tox>=4.4.11",
    "coverage>=7.2.3",
    "elastic-apm>=6.15.1",
    "django-prometheus>=2.2.0",
    "opentelemetry-sdk>=1.17.0",
    "opentelemetry-instrumentation-django>=0.38b0",
    "requests>=2.28.2",
    "opentelemetry-exporter-prometheus>=1.12.0rc1",
    "pytest-cov>=4.0.0",
]
[tool.pdm.scripts]
pep8 = "autopep8 --in-place --recursive ./src"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"
requires-python = ">=3.10.2"
license = {text = "n"}
