[project]
name = ""
version = ""
description = ""
authors = [
    {name = "candidosouza", email = "candidosouzza@gmail.com"},
]
dependencies = [
    # "django>=4.0.4",
    # "djangorestframework>=3.13.1",
    # "tox>=4.4.11",
    # "coverage>=7.2.3",
    # "elastic-apm>=6.15.1",
    # "django-prometheus>=2.2.0",
    # "opentelemetry-sdk>=1.17.0",
    # "opentelemetry-instrumentation-django>=0.38b0",
    # "requests>=2.28.2",
    # "opentelemetry-exporter-prometheus>=1.12.0rc1",
    # "django-extensions>=3.1.5",
    # "dependency-injector>=4.39.1",
    # "dj-database-url>=1.3.0",
    # "pydantic>=1.10.7",
    "python-dotenv>=1.0.0",
    # "mysqlclient>=2.1.1",
    # "colorama>=0.4.6",
]

requires-python = ">=3.11"
license = {text = "n"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    # "pylint>=2.13.0",
    # "pytest>=7.1.1",
    # "pytest-cov>=3.0.0",
    # "pytest-django>=4.5.2",
    # "model-bakery>=1.6.0",
    # "faker>=15.0.0",
]
[tool.pdm.scripts]
manage="python ./src/django_app/manage.py"
runserver = "pdm run manage runserver 0.0.0.0:8000"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
